2011-10-14  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/sse.md (*avx_cvtdq2pd256_2): Rename to...
	(avx_cvtdq2pd256_2): ... this.
	(sseunpackfltmode): New mode attr.
	(vec_unpacks_float_hi_v8hi, vec_unpacks_float_lo_v8hi,
	vec_unpacku_float_hi_v8hi, vec_unpacku_float_lo_v8hi): Macroize
	using VI2_AVX2 iterator.
	(vec_unpacku_float_hi_v8si, vec_unpacku_float_lo_v8si): New
	expanders.

2011-10-13  David S. Miller  <davem@davemloft.net>

	* config/sparc/sparc.md (plusminus): New code iterator.
	(plusminus_insn): New code attr.
	(addv2si3, subv2si3, addv4hi3, subv4hi3, addv2hi3, subv2hi3): Merge
	using plusminus and plusminus_insn.
	(fpadd64_vis, fpsub64_vis): Likewise.

2011-10-13  Richard Henderson  <rth@redhat.com>

	* doc/md.texi (vec_perm): Document fallback to byte permutation.
	* genopinit.c (optabs): Add vec_perm_const.
	* optabs.c (can_vec_perm_expr_p): Rename from expand_vec_perm_expr_p.
	Reject non-vector modes.  Allow fallback to byte permutation.
	(expand_vec_perm_expr_1): Split out from ...
	(expand_vec_perm_expr): ... here.  Allow fallback to byte permutation.
	* optabs.h (DOI_vec_perm_const, vec_perm_const_optab): New.
	* tree-vect-generic.c (lower_vec_perm): Update for name change.

2011-10-13  Richard Henderson  <rth@redhat.com>

	* config/rs6000/altivec.md (vec_permv16qi): New pattern.

	* config/rs6000/spu.md (vec_permv16qi): New pattern.

	* config/i386/i386.c (ix86_expand_vec_perm_const): New.
	* config/i386/i386-protos.h: Update.
	* config/i386/sse.md (VEC_PERM_CONST): New mode iterator.
	(vec_perm_const<VEC_PERM_CONST>): New expander.

	* optabs.c (expand_vector_broadcast): New.
	(expand_binop): Expand scalar shifts of vectors to vector shifts
	of vectors, if the former isn't supported.
	* tree-vect-generic.c (expand_vector_operations_1): Don't do that
	here; always simplify to scalar shift of vector if possible.

	* config/rs6000/rs6000.c (rs6000_expand_vector_init): Fix mode
	test for vector splat.
