@@ -1,3 +1,10 @@
+2011-10-14  Iain Sandoe  <iains@gcc.gnu.org>
+
+	PR bootstrap/50699
+	* config/darwin.c (darwin_patch_builtin): Adjust argument type. Only
+	build for powerpc targets.  (darwin_patch_builtins): Only build for 
+	powerpc targets.
+
 2011-10-14  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/sse.md (*avx_cvtdq2pd256_2): Rename to...
